--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -424,19 +424,74 @@
         </div>
     </section>
     <!--/.CONTACT END-->
-    <section id="footer">
-        <div class="container">
-            <div class="row">
-
-            </div>
-        </div>
-    </section>
+   
 <div id="social-links">
     <div class="items"><a href="https://www.instagram.com/kamrul_hasan_himel/?hl=en"><i class="fab fa-instagram"></i></a></div>
     <div class="items"><a href="https://www.facebook.com/profile.php?id=100006429803429"><i class="fab fa-facebook-f"></i></a></i></div>
     <div class="items"><a href="https://twitter.com/kamrulhasan325"><i class="fab fa-twitter"></i></a></div>
     <div class="items"><a href="https://www.linkedin.com/in/kamrul-hasan-b510a4144/"><i class="fab fa-linkedin-in"></i></a></div>
 </div>
+           <!-- Footer -->
+        <footer id="footer">
+        	<div class="footer-top">
+		        <div class="container">
+		        	<div class="row">
+		        		<div class="col-md-4 col-lg-3 footer-about wow fadeInUp">
+		        			<h3>Kamrul hasan</h3>
+		        			<p>
+		        				We are a young company always looking for new and creative ideas to help you with our products in your everyday work.
+		        			</p>
+		        			<p><a href="#">Our Team</a></p>
+	                    </div>
+		        		<div class="col-md-4 col-lg-4 offset-lg-1 footer-contact wow fadeInDown">
+		        			<h3>Contact</h3>
+		                	<p><i class="fas fa-map-marker-alt"></i> Via Rossini 10, 10136 Turin Italy</p>
+		                	<p><i class="fas fa-phone"></i> Phone: (0039) 333 12 68 347</p>
+		                	<p><i class="fas fa-envelope"></i> Email: <a href="mailto:kh317325@gmail.com">kh317325@gmail.com</a></p>
+		                	<p><i class="fab fa-skype"></i> Skype: you_online</p>
+	                    </div>
+	                    <div class="col-md-4 col-lg-4 footer-links wow fadeInUp">
+	                    	<div class="row">
+	                    		<div class="col">
+	                    			<h3>Links</h3>
+	                    		</div>
+	                    	</div>
+	                    	<div class="row">
+	                    		<div class="col-md-6">
+	                    			<p><a class="scroll-link" href="#top-content">Top</a></p>
+	                    			<p><a class="scroll-link" href="#section-1">Section 1</a></p>
+	                    			<p><a class="scroll-link" href="#section-2">Section 2</a></p>
+	                    			<p><a class="scroll-link" href="#section-3">Section 3</a></p>
+	                    		</div>
+	                    		<div class="col-md-6">
+	                    			<p><a class="scroll-link" href="#section-4">Section 4</a></p>
+	                    			<p><a href="#">Affiliates</a></p>
+	                    			<p><a href="#">Terms</a></p>
+	                    		</div>
+	                    	</div>
+	                    </div>
+		            </div>
+		        </div>
+	        </div>
+	        <div class="footer-bottom">
+	        	<div class="container">
+	        		<div class="row">
+	           			<div class="col-md-6 footer-copyright">
+	                    	&copy; kamrul hasan
+	                    </div>
+	           			<div class="col-md-6 footer-social">
+	                    	<a href="#"><i class="fab fa-facebook"></i></a> 
+							<a href="#"><i class="fab fa-twitter"></i></a> 
+							<a href="#"><i class="fab fa-google-plus-g"></i></a> 
+							<a href="#"><i class="fab fa-instagram"></i></a> 
+							<a href="#"><i class="fab fa-pinterest"></i></a>
+	                    </div>
+	           		</div>
+	        	</div>
+	        </div>
+        </footer>
+   
+   
     <script src="js/typed.min.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/WOW.js"></script>
