--- a/innovationsofts/Website/index.html
+++ b/innovationsofts/Website/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>PSD TO HTML</title>
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <nav>
-            <h2 id="logo">LOGO</h2>
+            <h2 id="logo">KH</h2>
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
@@ -32,17 +32,17 @@
             <h2>Team</h2>
             <div id="members">
                     <div class="teamMember">
-                        <img src="/img/1.png" alt="">
+                        <img src="img/1.png" alt="">
                         <h3>John Deo</h3>
                         <h4>Founder & CEO</h4>
                     </div>
                     <div class="teamMember">
-                        <img src="/img/2.png" alt="">
+                        <img src="img/2.png" alt="">
                         <h3>John Deo</h3>
                         <h4>Co - Founder</h4>
                     </div>
                     <div class="teamMember">
-                        <img src="/img/3.png" alt="">
+                        <img src="img/3.png" alt="">
                         <h3>John Deo</h3>
                         <h4>Investor</h4>
                     </div>
@@ -60,9 +60,9 @@
                 </ul>
 
                 <div id="social">
-                    <div class="icon"><img src="/img/email.png" alt=""></div>
-                    <div class="icon"><img src="/img/facebook.png" alt=""></div>
-                    <div class="icon"><img src="/img/twitter.png" alt=""></div>
+                    <div class="icon"><img src="img/email.png" alt=""></div>
+                    <div class="icon"><img src="img/facebook.png" alt=""></div>
+                    <div class="icon"><img src="img/twitter.png" alt=""></div>
                 </div>
             </div>
 
