--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,14 +17,14 @@
     <title> Kamrul Hasan::Home </title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar">
 
     <section id="header">
         <div class="container">
             <div class="row">
-                <nav class="navbar navbar-default navbar-expand-md navbar-light bg-transparent  col">
+                <nav class="navbar navbar-default navbar-expand-md navbar-light bg-transparent navbar-fixed-top col">
 
-                    <div class="logo wow bounceInUp">
+                    <div class="logo wow bounceInUp col">
                         <h1 class="navbar-brand " href="#">Kamrul Hasan</h1>
                     </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="true" aria-label="Toggle navigation">
@@ -230,7 +230,7 @@
     <section class="grey-bg" id="education">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 content-left">
                     <h3 class="title-small">
                         <span><i class="fas fa-user-graduate"></i> Education</span>
                     </h3>
@@ -426,50 +426,30 @@
     <!--/.CONTACT END-->
    
 <div id="social-links">
-    <div class="items"><a href="https://www.instagram.com/kamrul_hasan_himel/?hl=en"><i class="fab fa-instagram"></i></a></div>
-    <div class="items"><a href="https://www.facebook.com/profile.php?id=100006429803429"><i class="fab fa-facebook-f"></i></a></i></div>
-    <div class="items"><a href="https://twitter.com/kamrulhasan325"><i class="fab fa-twitter"></i></a></div>
-    <div class="items"><a href="https://www.linkedin.com/in/kamrul-hasan-b510a4144/"><i class="fab fa-linkedin-in"></i></a></div>
+    <div class="items insta"><a href="https://www.instagram.com/kamrul_hasan_himel/?hl=en"><i class="fab fa-instagram"></i></a></div>
+    <div class="items fb"><a href="https://www.facebook.com/profile.php?id=100006429803429"><i class="fab fa-facebook-f"></i></a></i></div>
+    <div class="items twitter"><a href="https://twitter.com/kamrulhasan325"><i class="fab fa-twitter"></i></a></div>
+    <div class="items linkedin"><a href="https://www.linkedin.com/in/kamrul-hasan-b510a4144/"><i class="fab fa-linkedin-in"></i></a></div>
 </div>
            <!-- Footer -->
         <footer id="footer">
         	<div class="footer-top">
 		        <div class="container">
-		        	<div class="row">
-		        		<div class="col-md-4 col-lg-3 footer-about wow fadeInUp">
+		        	<div class="row footer">
+		        		<div class="col footer-about wow fadeInUp">
 		        			<h3>Kamrul hasan</h3>
 		        			<p>
 		        				We are a young company always looking for new and creative ideas to help you with our products in your everyday work.
 		        			</p>
 		        			<p><a href="#">Our Team</a></p>
 	                    </div>
-		        		<div class="col-md-4 col-lg-4 offset-lg-1 footer-contact wow fadeInDown">
+		        		<div class="col  footer-contact wow fadeInDown">
 		        			<h3>Contact</h3>
 		                	<p><i class="fas fa-map-marker-alt"></i> Via Rossini 10, 10136 Turin Italy</p>
 		                	<p><i class="fas fa-phone"></i> Phone: (0039) 333 12 68 347</p>
 		                	<p><i class="fas fa-envelope"></i> Email: <a href="mailto:kh317325@gmail.com">kh317325@gmail.com</a></p>
-		                	<p><i class="fab fa-skype"></i> Skype: you_online</p>
 	                    </div>
-	                    <div class="col-md-4 col-lg-4 footer-links wow fadeInUp">
-	                    	<div class="row">
-	                    		<div class="col">
-	                    			<h3>Links</h3>
-	                    		</div>
-	                    	</div>
-	                    	<div class="row">
-	                    		<div class="col-md-6">
-	                    			<p><a class="scroll-link" href="#top-content">Top</a></p>
-	                    			<p><a class="scroll-link" href="#section-1">Section 1</a></p>
-	                    			<p><a class="scroll-link" href="#section-2">Section 2</a></p>
-	                    			<p><a class="scroll-link" href="#section-3">Section 3</a></p>
-	                    		</div>
-	                    		<div class="col-md-6">
-	                    			<p><a class="scroll-link" href="#section-4">Section 4</a></p>
-	                    			<p><a href="#">Affiliates</a></p>
-	                    			<p><a href="#">Terms</a></p>
-	                    		</div>
-	                    	</div>
-	                    </div>
+	                    
 		            </div>
 		        </div>
 	        </div>
@@ -497,6 +477,7 @@
     <script src="js/WOW.js"></script>
     <script src="js/owl.carousel.min.js" type="text/javascript"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
