--- a/Work/index.html
+++ b/Work/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/font-awesome.css">
 
-    
+
 </head>
 
 <body>
@@ -82,177 +82,191 @@
         </div>
         <div class="mid">
             <p> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing </p>
-            <ul>
-                <li><a href="#" class="active">All</a></li>
-                <li><a href="#">Branding</a></li>
-                <li><a href="#">Web</a></li>
-                <li><a href="#">Logo Design</a></li>
-                <li><a href="#">Photography</a></li>
-            </ul>
-        </div>
-        <div class="imagediv">
-            <img src="image/2.jpg" alt="">
-            <img src="image/3.jpg" alt="">
-            <img src="image/4.jpg" alt="">
-            <img src="image/5.jpg" alt="">
-            <img src="image/6.jpg" alt="">
-            <img src="image/gorila.jpg" alt="">
-            <img src="image/7.jpg" alt="">
-            <img src="image/8.jpg" alt="">
-
-        </div>
-    </div>
-
-
-    <div class="fourthSection" id="teamId">
-
-        <div class="team">
-            <h2>MEET OUR TEAM</h2>
-            <img src="image/love1.png" alt="">
-        </div>
-        <div class="mid">
-            <p> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing </p>
-        </div>
-        <div class="teamimage">
-            <div class="img">
-                <img src="image/t1.jpeg" alt="">
-                <h2>
-                    John Doe
-                </h2>
-                <h4>Managing Director</h4>
+            <div class="portfolio-filter">
+                <ul>
+                    <li data-filter="*">All</li>
+                    <li data-filter=".web">Web</li>
+                    <li data-filter=".graphics">Graphics</li>
+                    <li data-filter=".logo">Logo</li>
+                    <li data-filter=".seo">Seo</li>
+                </ul>
             </div>
-            <div class="img">
-                <img src="image/t2.jpeg" alt="">
-                <h2>
-                    John Doe
-                </h2>
-                <h4>Lead Designer</h4>
-            </div>
-            <div class="img">
-                <img src="image/t3.jpeg" alt="">
-                <h2>
-                    John Doe
-                </h2>
-                <h4>Lead Developer</h4>
-            </div>
-            <div class="img">
-                <img src="image/t1.jpeg" alt="">
-                <h2>
-                    John Doe
-                </h2>
-                <h4>Sr. UI Designer</h4>
-            </div>
-        </div>
-    </div>
-    <div class="fifthSection">
-        <img src="image/fun.jpg" width="100%" alt="">
-        <div class="fundiv">
-            <div class="fundivMid">
-                <div class="icon">
-                    <i class="fa fa-clock-o" aria-hidden="true"></i><br>
-                    <span class="counter">3200</span>
-                    <h4>HOURS OF WORK</h4>
+            <div class="grid">
+                <div class="element-item web">
+                    <img src="image/2.jpg" class="image " alt="">
                 </div>
-                <div class="icon">
-                    <i class="fa fa-users" aria-hidden="true"></i><br>
-                    <span class="counter">1260</span>
-                    <h4>SATISFIED CLIENTS</h4>
+                <div class=" element-item web">
+                    <img src="image/3.jpg" class="image" alt="">
                 </div>
-                <div class="icon">
-                    <i class="fa fa-rocket" aria-hidden="true"></i><br>
-                    <span class="counter">360</span>
-                    <h4>PROJECTS DELIVERED</h4>
+                <div class=" element-item seo">
+                    <img src="image/4.jpg" class="image" alt="">
                 </div>
-                <div class="icon">
-                    <i class="fa fa-trophy" aria-hidden="true"></i><br>
-                    <span class="counter">42</span>
-                    <h4>AWARD WON</h4>
+                <div class=" element-item graphics">
+                    <img src="image/5.jpg" class="image" alt="">
+                </div>
+                <div class=" element-item seo">
+                    <img src="image/6.jpg" class="image" alt="">
+                </div>
+                <div class=" element-item logo">
+                    <img src="image/gorila.jpg" class="image" alt="">
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="fourthSection" id="teamId">
+
+            <div class="team">
+                <h2>MEET OUR TEAM</h2>
+                <img src="image/love1.png" alt="">
+            </div>
+            <div class="mid">
+                <p> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing </p>
+            </div>
+            <div class="teamimage">
+                <div class="img">
+                    <img src="image/t1.jpeg" alt="">
+                    <h2>
+                        John Doe
+                    </h2>
+                    <h4>Managing Director</h4>
+                </div>
+                <div class="img">
+                    <img src="image/t2.jpeg" alt="">
+                    <h2>
+                        John Doe
+                    </h2>
+                    <h4>Lead Designer</h4>
+                </div>
+                <div class="img">
+                    <img src="image/t3.jpeg" alt="">
+                    <h2>
+                        John Doe
+                    </h2>
+                    <h4>Lead Developer</h4>
+                </div>
+                <div class="img">
+                    <img src="image/t1.jpeg" alt="">
+                    <h2>
+                        John Doe
+                    </h2>
+                    <h4>Sr. UI Designer</h4>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="sixthSection" id="contactId">
-        <div class="letsDiscuss">
-            <h2>LET'S DISCUSS</h2>
-            <img src="image/love1.png" alt="">
-        </div>
-        <div class="mid">
-            <p> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing </p>
-
-        </div>
-        <div class="sixMid">
-            <div class="address">
-                <h2>Cras at ultrices erat, sed vulputate!</h2>
-                <p>2345 Setwant natrer, 1234, Washington. United States. (401) 1234 567 hello@brandi.com ww.brandi.com
-                </p>
-            </div>
-            <div class="form">
-                <h2>Say hello!</h2>
-                <div class="formInput">
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email">
-                    <input type="message" placeholder="Message">
-                </div>
-                <a href=""><i class="fa fa-google-plus" aria-hidden="true"></i> Send Message</a>
-            </div>
-            <div class="social">
-                <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="www.gmail.com" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-            </div>
-        </div>
-        <img src="image/map.jpg" width="100%" alt="">
-    </div>
-    <hr>
-    <div class="footer">
-        <div class="footerMid">
-            <div class="branding">
-                <h1>Kamrul Hasan</h1>
-                <p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </div>
-            <div class="subscribe">
-                <h3>Subscribe</h3>
-                <input type="text">
-                <button type="submit">Subscribe Me</button>
-
-            </div>
-            <div class="explorer">
-                <h3>Explore</h3>
-                <div class="leftLink">
-                    <a href="">Enavto</a>
-                    <a href="">Themecurve</a>
-                    <a href="">Kreativeshowcase</a>
-                    <a href="">Freebiescurve</a>
-                </div>
-                <div class="rightLink">
-                    <a href="">Themeforest</a>
-                    <a href="">Microsoft</a>
-                    <a href="">Google</a>
-                    <a href="">Yahoo</a>
+        <div class="fifthSection">
+            <img src="image/fun.jpg" width="100%" alt="">
+            <div class="fundiv">
+                <div class="fundivMid">
+                    <div class="icon">
+                        <i class="fa fa-clock-o" aria-hidden="true"></i><br>
+                        <span class="counter">3200</span>
+                        <h4>HOURS OF WORK</h4>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-users" aria-hidden="true"></i><br>
+                        <span class="counter">1260</span>
+                        <h4>SATISFIED CLIENTS</h4>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-rocket" aria-hidden="true"></i><br>
+                        <span class="counter">360</span>
+                        <h4>PROJECTS DELIVERED</h4>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-trophy" aria-hidden="true"></i><br>
+                        <span class="counter">42</span>
+                        <h4>AWARD WON</h4>
+                    </div>
                 </div>
             </div>
-            <div class="right">
-                <p>Created with by Kamrul, exclusive for kreativeshowcase
-                </p>
-                <h4>All rights reserved by @kamrul Hasan</h4>
+        </div>
+        <div class="sixthSection" id="contactId">
+            <div class="letsDiscuss">
+                <h2>LET'S DISCUSS</h2>
+                <img src="image/love1.png" alt="">
+            </div>
+            <div class="mid">
+                <p> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing </p>
+
+            </div>
+            <div class="sixMid">
+                <div class="address">
+                    <h2>Cras at ultrices erat, sed vulputate!</h2>
+                    <p>2345 Setwant natrer, 1234, Washington. United States. (401) 1234 567 hello@brandi.com ww.brandi.com
+                    </p>
+                </div>
+                <div class="form">
+                    <h2>Say hello!</h2>
+                    <div class="formInput">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <input type="message" placeholder="Message">
+                    </div>
+                    <a href=""><i class="fa fa-google-plus" aria-hidden="true"></i> Send Message</a>
+                </div>
+                <div class="social">
+                    <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="www.gmail.com" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+
+                </div>
+            </div>
+            <img src="image/map.jpg" width="100%" alt="">
+        </div>
+        <hr>
+        <div class="footer">
+            <div class="footerMid">
+                <div class="branding">
+                    <h1>Kamrul Hasan</h1>
+                    <p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+                <div class="subscribe">
+                    <h3>Subscribe</h3>
+                    <input type="text">
+                    <button type="submit">Subscribe Me</button>
+
+                </div>
+                <div class="explorer">
+                    <h3>Explore</h3>
+                    <div class="leftLink">
+                        <a href="">Enavto</a>
+                        <a href="">Themecurve</a>
+                        <a href="">Kreativeshowcase</a>
+                        <a href="">Freebiescurve</a>
+                    </div>
+                    <div class="rightLink">
+                        <a href="">Themeforest</a>
+                        <a href="">Microsoft</a>
+                        <a href="">Google</a>
+                        <a href="">Yahoo</a>
+                    </div>
+                </div>
+                <div class="right">
+                    <p>Created with by Kamrul, exclusive for kreativeshowcase
+                    </p>
+                    <h4>All rights reserved by @kamrul Hasan</h4>
+                </div>
             </div>
         </div>
-    </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script>
-        jQuery(document).ready(function( $ ) {
-$('.counter').counterUp({
-delay: 20, // the delay time in ms
-time: 1000 // the speed time in ms
-});
-});
-</script>
+       <script src="js/jquery.min.js"></script>
+        <script src="js/waypoints.min.js"></script>
+        <script src="js/jquery.counterup.min.js"></script>
+        <script src="js/imagesloaded.pkgd.min.js"></script>
+        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/main.js"></script>
+        <script>
+            jQuery(document).ready(function($) {
+                $('.counter').counterUp({
+                    delay: 10, // the delay time in ms
+                    time: 1000 // the speed time in ms
+                });
+            });
+        </script>
 </body>
 
 </html>
