--- a/Masum/index.html
+++ b/Masum/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Brandi::HOME</title>
-   <!-- <link rel="stylesheet" href="style.css">-->
-    <!--//<link rel="stylesheet" href="css/font-awesome.css"-->
+   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/font-awesome.css"
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="firstSection">
-        <img src="image/" alt="image">
+        <img src="image/headerimage.jpg" alt="image">
         <div class="adv">
 
             <h1><span>Meet</span> Brandi!</h1>
